2012-08-07  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/bsd/bsd4.4/bits/fcntl.h (O_NOCTTY): Define to 0x8000,
	not 0.
	(O_ASYNC, O_FSYNC, O_SYNC): Move outside [__USE_MISC].
	[__USE_XOPEN2K8] (O_DIRECTORY, O_NOFOLLOW, O_CLOEXEC): New macros.
	(FCREAT, FEXCL, FTRUNC, FNOCTTY, FNONBLOCK): Macros removed.
	(struct flock): Move l_start, l_len to the beginning.
	Use __pid_t for l_pid.
	[__USE_XOPEN2K] (POSIX_FADV_NORMAL, POSIX_FADV_RANDOM): New macros.
	[__USE_XOPEN2K] (POSIX_FADV_SEQUENTIAL, POSIX_FADV_WILLNEED): Likewise.
	[__USE_XOPEN2K] (POSIX_FADV_DONTNEED, POSIX_FADV_NOREUSE): Likewise.
	(F_GETLK64, F_SETLK64, F_SETLKW64): New macros.
	[__USE_XOPEN2K8] (F_DUPFD_CLOEXEC): New macro.
	[__USE_LARGEFILE64] (struct flock64): New type.
	(F_GETOWN, F_SETOWN): Also define for [__USE_XOPEN2K8].

	* sysdeps/unix/bsd/bsd4.4/bits/dirent.h: Renamed to ...
	* bits/dirent.h: ... here.

	* sysdeps/unix/bsd/bsd4.4/bits/dirent.h
	[__INO_T_MATCHES_INO64_T] (_DIRENT_MATCHES_DIRENT64): New macro.

2012-08-07  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/configure.in (arch_minimum_kernel):
	Change from 2.6.0 to 2.6.16.
	* sysdeps/unix/sysv/linux/configure: Regenerated.
	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_POSIX_CPU_TIMERS): Define unconditionally.
	(__ASSUME_TGKILL): Define conditional on architectures, not kernel
	version.
	(__ASSUME_UTIMES): Likewise.
	(__ASSUME_CLONE_STOPPED): Remove.
	(__ASSUME_FADVISE64_64_SYSCALL): Define conditional on
	architectures, not kernel version.
	(__ASSUME_PROT_GROWSUPDOWN): Define unconditionally.
	(__ASSUME_NO_CLONE_DETACHED): Likewise.
	(__ASSUME_GETDENTS32_D_TYPE): Likewise.
	(__ASSUME_WAITID_SYSCALL): Likewise.
	[__sparc__ && __arch64__] (__ASSUME_STAT64_SYSCALL): Do not
	condition definition on __LINUX_KERNEL_VERSION >= 0x02060c.
	* README: State 2.6.16 as minimum Linux kernel version.  Do not
	refer to older versions.

2012-08-06  Roland McGrath  <roland@hack.frob.com>
